--- a/_includes/js.html
+++ b/_includes/js.html
@@ -6,3 +6,4 @@
 <script src="{{ site.baseurl }}/static/js/material.min.js"></script>
 <script src="{{ site.baseurl }}/static/js/main.js"></script>
 <script src="{{ site.baseurl }}/static/js/projects.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
